Aula 13  - Carrinho de Compras

--- a/src/main/webapp/resources/css/produtos.css
+++ b/src/main/webapp/resources/css/produtos.css
@@ -153,7 +153,7 @@
 }
 
 .submit-image:after {
-    content: "Comprar";
+    content: "Adicionar ao Carrinho";
     margin-right: 0.3em;
     vertical-align: middle;
 }
