--- a/src/main/webapp/resources/css/layout-colors.css
+++ b/src/main/webapp/resources/css/layout-colors.css
@@ -136,19 +136,31 @@ html {
   color: #EF7000;
 }
 
-#checkout{
-  text-decoration: bold;
-  color: #FFF;
-  text-shadow: none;/*1px 3px #295408; /*ORIGINAL #A74E00*/
-  border: 2px solid #FBBD87;
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), #F4994A; /* Old browsers */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), -moz-linear-gradient(top, #F4994A 0%, #EF7000 100%); /* FF3.6+ */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F4994A), color-stop(100%,#EF7000)); /* Chrome,Safari4+ */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), -webkit-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* Chrome10+,Safari5.1+ */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), -o-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* Opera 11.10+ */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), -ms-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* IE10+ */
-  background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/177/assets/carrinho.png?12627631472548691746'), linear-gradient(to bottom, #F4994A 0%,#EF7000 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F4994A', endColorstr='#EF7000',GradientType=0 ); /* IE6-9 */
+.checkout{
+	text-align: left;
+  	padding-left: .5em;
+	height: 40px;
+	font-size: 16px;
+	border-radius: 8px;
+	padding: 0 9px 0 2px;
+	text-transform: uppercase;
+	cursor: pointer;
+	background-repeat: no-repeat; 
+	background-position: 50%;
+	font-family: "Droid Sans", Sans-serif;
+	font-weight: 100;
+	text-decoration: bold;
+	color: #FFF;
+	text-shadow: none;/*1px 3px #295408; /*ORIGINAL #A74E00*/
+	border: 2px solid #FBBD87;
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), #F4994A; /* Old browsers */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), -moz-linear-gradient(top, #F4994A 0%, #EF7000 100%); /* FF3.6+ */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F4994A), color-stop(100%,#EF7000)); /* Chrome,Safari4+ */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), -webkit-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* Chrome10+,Safari5.1+ */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), -o-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* Opera 11.10+ */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), -ms-linear-gradient(top, #F4994A 0%,#EF7000 100%); /* IE10+ */
+	background-image: url('//cdn.shopify.com/s/files/1/0155/7645/t/232/assets/cart.png?4611017335607166698'), linear-gradient(to bottom, #F4994A 0%,#EF7000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F4994A', endColorstr='#EF7000',GradientType=0 ); /* IE6-9 */
 }
 
 #customer-area a:link,
